@@ -1,3 +1,7 @@
+tminh
 --module-path "C:/CodeFiles/javaFiles/javafx-sdk-24.0.1/lib" 
 --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.media,javafx.swing,javafx.web
 -cp bin;resource application.UI
+
+loan
+--module-path "/Users/nloan/development/javafx-sdk-24.0.1/lib" --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.media,javafx.swing,javafx.web -cp bin;resource application.UI
